--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.coverprofile
+coverage.out
+coverage.txt
+coverage.html
 
 # Dependency directories (remove the comment below if you use Go modules)
 vendor/
